IRtest_out/101_insert_order.err
irs/101_insert_order.ll:29:29: error: invalid getelementptr indices
  %v26 = getelementptr i32, i32* %v13, i32 0, i32 %v25
                            ^
1 error generated.
